<resources>
    <string name="app_name">Habitimia</string>
    <!-- Strings related to login -->
    <string name="No_account">Don\'t you have an account ?</string>
    <string name="Already_account">Already have an account ?</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <string name="Sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_password_or_username">Invalid Username or Password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_guild">GuildActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Home -->
    <string name="beginner">Beginner</string>
    <string name="advanced">Advanced</string>
    <string name="expert">Expert</string>


    <!-- Quests -->
    <string name="quests">Quests</string>
    <string name="create_quest">Create Quest</string>
    <string name="name">Name</string>
    <string name="details">Details</string>
    <string name="difficulty_class">Difficulty Class</string>
    <string name="duration">Duration</string>
    <string name="create">Create</string>

    <!-- Dailies -->
    <string name="dailies">Dailies</string>

    <!-- Arena -->
    <string name="arena">Arena</string>
    <string name="duel">Duel</string>
    <string name="adventurer">Adventurer</string>
    <string name="battles">Battles</string>
    <string name="rate">Rate</string>
    <string name="username_placeholder">Theodore Mia</string>
    <string name="battles_placeholder">5,333</string>
    <string name="rate_placeholder">98%</string>

    <!-- TODO: Guild -->
    <string name="guild">Guild</string>
    <string name="join_chat">Join Chat</string>
    <string name="members">Members</string>

    <!-- TODO: Chat -->
    <string name="chat">Chat</string>
    <string name="type_message">Type message here</string>

    <!-- Daily -->
    <string name="create_daily">Create Daily</string>
    <string name="repetition">Repetition</string>
  
</resources>