<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/habitimia_title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/title" />

    <ImageView
        android:id="@+id/background"
        android:layout_width="442dp"
        android:layout_height="430dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habitimia_title1"
        app:srcCompat="@drawable/background_1" />

    <ImageView
        android:id="@+id/login_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@id/background"
        app:layout_constraintStart_toStartOf="@id/background"
        app:layout_constraintTop_toTopOf="@id/background"
        app:srcCompat="@drawable/login_box" />

    <EditText
        android:id="@+id/username"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:layout_marginTop="210dp"
        android:background="@drawable/btn_3"
        android:hint="@string/Username"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/login_box"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@id/login_box"
        app:layout_constraintTop_toTopOf="@id/login_box" />

    <EditText
        android:id="@+id/password"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_3"
        android:hint="@string/Password"
        android:imeActionLabel="@string/Sign_in"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/login_box"
        app:layout_constraintStart_toStartOf="@id/login_box"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/login"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/btn_2"
        android:enabled="true"
        android:text="@string/Sign_in"
        android:textSize="18sp"
        app:backgroundTint="@color/orange_btn"
        app:layout_constraintBottom_toBottomOf="@id/login_box"
        app:layout_constraintEnd_toEndOf="@id/login_box"
        app:layout_constraintStart_toStartOf="@id/login_box"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/register"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_1"
        android:backgroundTintMode="add"
        android:text="@string/Register"
        android:textColor="@color/blue_btn"
        android:textSize="18sp"
        app:backgroundTint="@color/blue_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="7dp"
        android:text="@string/No_account"
        android:textColor="@color/blue_btn"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_box" />

</androidx.constraintlayout.widget.ConstraintLayout>