<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.quest.CreateQuestFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_bar_quest"
            android:layout_width="0dp"
            android:layout_height="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/background_top_bar_create_daily"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/rectangle"
                app:tint="@color/orange_btn" />

            <TextView
                android:id="@+id/title_create_daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:layout_marginTop="16dp"
                android:text="@string/create_daily"
                android:textColor="@color/text_red"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/back_create_daily"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/back_create_daily"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:background="#00FFFFFF"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_arrow_left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/dark_blue" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/create_daily_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/createdaily_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/createquestsbox"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/DailyName"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rectangle"
                android:backgroundTint="@color/plus_btn"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/DailyDetails"
                app:layout_constraintEnd_toEndOf="@id/createdaily_background"
                app:layout_constraintStart_toStartOf="@id/createdaily_background"
                app:layout_constraintTop_toTopOf="@id/createdaily_background" />

            <EditText
                android:id="@+id/DailyDetails"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rectangle"
                android:backgroundTint="@color/plus_btn"
                android:ems="10"
                android:hint="@string/details"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength="2000"
                android:maxLines="4"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/difficulty_class_title"
                app:layout_constraintEnd_toEndOf="@id/createdaily_background"
                app:layout_constraintStart_toStartOf="@id/createdaily_background"
                app:layout_constraintTop_toBottomOf="@id/DailyName" />

            <TextView
                android:id="@+id/difficulty_class_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="7dp"
                android:text="@string/difficulty_class"
                android:textColor="@color/gray"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="@id/createdaily_background"
                app:layout_constraintStart_toStartOf="@id/createdaily_background"
                app:layout_constraintTop_toBottomOf="@+id/DailyDetails" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginBottom="19dp"
                android:background="@drawable/rectangle"
                android:backgroundTint="@color/plus_btn"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:layout_constraintBottom_toTopOf="@id/repetition_title"
                app:layout_constraintEnd_toEndOf="@id/repetitionLinearLayout"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/repetitionLinearLayout"
                app:layout_constraintTop_toBottomOf="@id/difficulty_class_title">

                <Button
                    android:id="@+id/Class_F_Daily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/difficulty_btn_1"
                    android:text="F"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/Class_E_Daily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/difficulty_btn_2"
                    android:text="E"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/Class_D_Daily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/difficulty_btn_3"
                    android:text="D"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/Class_C_Daily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/difficulty_btn_4"
                    android:text="C"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/Class_B_Daily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/difficulty_btn_5"
                    android:text="B"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/Class_A_Daily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/difficulty_btn_6"
                    android:text="A"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/Class_S_Daily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/difficulty_btn_7"
                    android:text="S"
                    android:textColor="@color/black" />
            </LinearLayout>

            <TextView
                android:id="@+id/repetition_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="10dp"
                android:text="@string/repetition"
                android:textColor="@color/gray"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/repetitionLinearLayout"
                app:layout_constraintEnd_toEndOf="@id/createdaily_background"
                app:layout_constraintStart_toStartOf="@id/createdaily_background"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <LinearLayout
                android:id="@+id/repetitionLinearLayout"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginBottom="19dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/rectangle"
                android:backgroundTint="@color/plus_btn"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:layout_constraintBottom_toTopOf="@id/createDaily"
                app:layout_constraintEnd_toEndOf="@id/createdaily_background"
                app:layout_constraintStart_toStartOf="@id/createdaily_background"
                app:layout_constraintTop_toBottomOf="@id/difficulty_class_title">

                <Button
                    android:id="@+id/Monday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/difficulty_btn_1"
                    android:text="M"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/Tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/difficulty_btn_2"
                    android:text="T"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/Wednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/difficulty_btn_3"
                    android:text="W"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/Thursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/difficulty_btn_4"
                    android:text="T"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/Friday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/difficulty_btn_5"
                    android:text="F"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/Saturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/difficulty_btn_6"
                    android:text="S"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/Sunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/difficulty_btn_7"
                    android:text="S"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>
<!--            <SeekBar-->
<!--                android:id="@+id/DurationBar"-->
<!--                style="@style/Widget.AppCompat.SeekBar.Discrete"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="27dp"-->
<!--                android:layout_marginStart="20dp"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:layout_marginEnd="20dp"-->
<!--                android:layout_marginBottom="19dp"-->
<!--                android:max="30"-->
<!--                android:progress="15"-->
<!--                android:progressTint="@color/orange_btn"-->
<!--                android:thumbTint="@color/orange_btn"-->
<!--                app:layout_constraintBottom_toTopOf="@id/createQuest"-->
<!--                app:layout_constraintEnd_toEndOf="@id/createdaily_background"-->
<!--                app:layout_constraintStart_toStartOf="@id/createdaily_background"-->
<!--                app:layout_constraintTop_toBottomOf="@id/duration_title" />-->

            <Button
                android:id="@+id/createDaily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_1"
                android:backgroundTintMode="add"
                android:text="@string/create"
                android:textColor="@color/orange_btn"
                android:textSize="18sp"
                app:backgroundTint="@color/orange_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/repetitionLinearLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>